# ORIE-5270-Final-project-Mason

./: .gitignore  LICENSE  README.md  RUN_ME_REPRODUCE.ipynb  check_orie5270_project_ready.ipynb  pyproject.toml
.github/workflows/: tests.yml
data/: README.md
docs/: project_plan.md
scripts/: download_data.py  run_demo.py  run_taxi_analysis.py
src/orie5270_project/: __init__.py  cli.py  dataset.py  metrics.py  taxi.py
tests/: test_cli.py  test_dataset.py  test_metrics.py  test_taxi.py
